# kintai

./: Cargo.toml  README.md  kintai.sh
src/: main.rs
