[package]
name = "kintai"
version = "0.1.0"
edition = "2021"
description = "simple kintai time management system"
authors = ["yochidros <yoshiki.myzw@gmail.com>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
